【librax分支】资源限制完成